# framework-creation

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
scripts/: build.sh
